--- a/POSVTA4/corterutamovil.html
+++ b/POSVTA4/corterutamovil.html
@@ -108,6 +108,7 @@ async function generarCorteMovil(){
 RUTA: ${ruta}
 VENDEDOR: ${USUARIO.nombre}
 TOTAL MXN: $${mxn(totalDia)}
+UTILIDAD %: ${utilidadPorcentaje}%
 VENTAS: ${ventasDia.length}
 --------------------------------
 VENTA POR DEPARTAMENTO
@@ -116,8 +117,11 @@ VENTA POR DEPARTAMENTO
 
   listaDeptos.forEach(([d,v])=>texto+=`${d.substring(0,16).padEnd(16)} $${mxn(v.venta)}\n`);
   texto+=`\n--------------------------------\nTOP ARTÍCULOS\n--------------------------------\n`;
-  topArt.forEach(([n,v])=>texto+=`${n.substring(0,20)}\n   $${mxn(v.importe)}\n`);
-  texto+="\n--------------------------------\n¡GRAN TRABAJO!\n";
+  topArt.forEach(([n,v])=>{
+  const nombre = n.substring(0,20).padEnd(22," ");
+  texto += `${nombre}$${mxn(v.importe)}\n`;
+});
+  texto+="\n--------------------------------\n¡BONITO DIA!\n";
 
   try{
     if("bluetooth"in navigator){
