--- a/POSVTA4/corterutamovil.html
+++ b/POSVTA4/corterutamovil.html
@@ -64,6 +64,9 @@ await cargarFechasPendientes();
 
 btnGenerar.addEventListener("click",generarCorteMovil);
 function imprimirRAWBT(texto) {
+  // Inicializar impresora ESC/POS y agregar saltos finales
+  texto = "\x1B\x40" + texto + "\n\n\n";
+
   const intent = `intent://print/?data=${
     encodeURIComponent(texto)
   }#Intent;scheme=rawbt;package=ru.a402d.rawbtprinter;end;`;
