--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -352,7 +352,9 @@ const productosMayoreo = [
   "75056308","75059514","75063801","75064648","75066345","75068738",
   "75068745","75068776","75068783","75068844","75069902","75071295",
   "75071776","75080495",
+  "7501020540666"   // 👈 AGREGADO Y LISTO
 ];
+
 
 // 🧮 Función que selecciona precio según cantidad
 function obtenerPrecioSegunCantidad(prod, cantidad) {
