--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -771,7 +771,7 @@ function addProduct(prod, cant = 1) {
     // No sumar kilos a lo anterior, crear línea nueva separada
 carrito.push({
   ...prod,
-  codigo: prod.codigo || prod.codigoBarra,    // ← 🔥 obligatorio para mayoreo
+  codigo: prod.codigo || prod.codigoBarra || "",
   cantidad: cant,
   precioUnit: Number(prod.precioPublico || 0),
   importe: cant * Number(prod.precioPublico || 0),
